--- a/logica de programação/exercicio10/exercicio-08/exercicio-03/modelo/index.html
+++ b/logica de programação/exercicio10/exercicio-08/exercicio-03/modelo/index.html
@@ -10,14 +10,12 @@
 
   <body>
     <section class="container">
-      <h1>Meu Timer</h1>
-      <p class="relogio">00:00:00</p>
-
+      <h1>LIsta de Tarefas</h1>
       <p>
-        <button class="iniciar">iniciar</button>
-        <button class="pausar">pausar</button>
-        <button class="zerar">zerar</button>
+        <input type="text" class="input-tarefa">
+        <button class="btn-tarefa">Adicionar tarefa</button>
       </p>
+      <ul class="tarefas"></ul>
     </section>
     <script src="./assets/js/main.js"></script>
   </body>
